--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="vieswport" content="widht=device-widht, initial-scale-1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-     <header>
-         <h1>Vai ser uma imagem aqui
-             <ul>
-                 <Li>Escola</Li>
-                 <li>Estudante</li>
-             </ul>
-         </h1>
-    </header>
+    <meta htts-equiv= "X-UA-compatible" content="IE=edge">
+    <meta name="viewport" content="whidth=decise-width, initial-scale=1.8">
+    <title>Equipe Alura Start</title>
+    <link rel="stylesheet" href="">
 
-</body>
-</html>
