--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Neymar.png" alt="foto da gabi">
-                <h3 class="estudante-nome">Neymar Jr</h3>
+                <img class="estudante-imagem" src="Bale.png" alt="foto da gabi">
+                <h3 class="estudante-nome">Bale</h3>
                 <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone"
@@ -56,8 +56,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Messi.png" alt="foto da lizandra">
-                <h3 class="estudante-nome">Lionel Messi</h3>
+                <img class="estudante-imagem" src="Benzema.jpg" alt="foto da lizandra">
+                <h3 class="estudante-nome">Benzema</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
