--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Cristiano.png" alt="foto do marcelo">
+                <img class="estudante-imagem" src="Cristiano Ronaldo.png" alt="foto do marcelo">
                 <h3 class="estudante-nome">Cristiano Ronaldo</h3>
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -68,8 +68,8 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
-                <h3 class="estudante-nome">Joice</h3>
+                <img class="estudante-imagem" src="Toni Kross.png" alt="foto da joice">
+                <h3 class="estudante-nome">Toni Kross</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
@@ -78,8 +78,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
-                <h3 class="estudante-nome">Maria</h3>
+                <img class="estudante-imagem" src="Lucas Modric.png" alt="foto da maria">
+                <h3 class="estudante-nome">Modric</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png"
@@ -88,8 +88,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
-                <h3 class="estudante-nome">Olivia</h3>
+                <img class="estudante-imagem" src="Casemiro.png" alt="foto da olhe">
+                <h3 class="estudante-nome">Casemiro</h3>
                 <img class="estudante-icone" src="github.png" alt="icone github">
                 <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
@@ -99,8 +99,8 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
-                <h3 class="estudante-nome">Rafaela</h3>
+                <img class="estudante-imagem" src="Marcelo.png" alt="foto da rafa">
+                <h3 class="estudante-nome">Marcelo</h3>
                 <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
@@ -109,8 +109,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
-                <h3 class="estudante-nome">Thais</h3>
+                <img class="estudante-imagem" src="Varane.png" alt="foto da thais">
+                <h3 class="estudante-nome">Varane</h3>
                 <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
