--- a/index.html
+++ b/index.html
@@ -118,7 +118,40 @@
                 <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
- 
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Sergio Ramos.jpg" alt="Sergio Ramos">
+                <h3 class="estudante-nome">Sergio Ramos</h3>
+                <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                            <img class="estudante-imagem" src="Carvajal.png" alt="foto do Carvajal">
+                            <h3 class="estudante-nome">Carvajal</h3>
+                            <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
+                                    alt="icone github"></a>
+                            <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
+                                    src="linkedin.png" alt="icone linkedin"></a>
+                            <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png"
+                                    alt="icone instagram"></a>
+                        </div>
+                        <div class="estudante-div">
+                            <img class="estudante-imagem" src="Navas.png" alt="foto do Navas">
+                            <h3 class="estudante-nome">Navas</h3>
+                            <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
+                                    alt="icone github"></a>
+                            <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
+                                    src="linkedin.png" alt="icone linkedin"></a>
+                            <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png"
+                                    alt="icone instagram"></a>
+                        </div>
+                       
+
         </div>
     </section>
  
