--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </header>
     <section id="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento
-                Computacional, através do ensino de Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
-                turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <h2 class="escola-titulo">Sobre o Real Madri</h2>
+            <p class="escola-texto-um">O Real Madrid em 2018 foi um dos anos mais históricos para o clube. Sob o comando de Zinedine Zidane, os Blancos conquistaram a Liga dos Campeões da UEFA pela terceira vez consecutiva, um feito inédito na era moderna do futebol europeu. Cristiano Ronaldo foi fundamental nessa jornada, liderando a equipe com seus gols decisivos. A final contra o Liverpool viu o Real Madrid emergir como vencedor, com gols cruciais de Gareth Bale. Além disso, o clube terminou em terceiro na La Liga, um pouco abaixo das expectativas, mas a glória europeia compensou. A temporada também foi marcada pela saída surpreendente de Zidane após a conquista da Champions, embora ele tenha retornado ao cargo posteriormente. Foi um ano de altos e baixos, mas, no final das contas, o Real Madrid demonstrou mais uma vez sua supremacia no cenário europeu, deixando sua marca na história do futebol.
+
+        </p>
+        
         </div>
         <img class="escola-imagem" src="Real Madri.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
