--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </p>
         
         </div>
-        <img class="escola-imagem" src="logo.jpg" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="rma.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
  
     <section id="estudante">
